parts-service.yaml
apiVersion: v1
kind: Service
metadata:
  # 이 Service의 이름을 정합니다.
  name: parts-service
spec:
  # --- [중요] ---
  # 어떤 이름표(label)를 가진 Pod에게 트래픽을 보낼지 정합니다.
  # 바로 위 deployment.yaml의 labels.app 값과 반드시 일치해야 합니다.
  selector:
    app: parts-service
  ports:
    - protocol: TCP
      # 이 Service가 클러스터 내부에서 사용할 포트입니다.
      port: 80
      # Service의 80번 포트로 온 요청을 Pod의 몇 번 포트로 전달할지 정합니다.
      # 바로 위 deployment.yaml의 containerPort 값과 반드시 일치해야 합니다.
      targetPort: 8080
  # 이 Service의 타입을 정합니다. ClusterIP는 클러스터 내부에서만 접근 가능합니다.
  type: ClusterIP
