ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
spec:
  rules:
    # HTTP 요청에 대한 규칙들을 정의합니다.
    - http:
        paths:
          # '/parts' 로 시작하는 모든 경로의 요청은
          - path: /parts
            pathType: Prefix
            backend:
              service:
                # 'parts-service'로 보냅니다.
                name: parts-service
                port:
                  number: 80
